Pin shiplift to revision
With this patch, we pin shiplift to a revision.
That is because shiplift may break from one revision to another on master (which
just happened and which is what we fixed in
cc8d3a7912203c90a6591e0d178c80f620bd61d0 ("Fix: Add type annotation").

We expect shiplift to hit tokio 1.0 anytime now and because of that we might
want to do a manual update of shiplift and tokio rather than an imperative
`cargo update` which may (short-term) break our codebase.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ serde          = "1"
 serde_json     = "1"
 sha1           = { version = "0.6", features = ["std"] }
 sha2           = "0.9"
-shiplift       = { git = "https://github.com/softprops/shiplift", branch = "master" }
+shiplift       = { git = "https://github.com/softprops/shiplift", rev = "03cc8c075f86f1bd9e2c4e29872a0e8b9072c7f0" }
 syntect        = "4.4"
 tar            = "0.4"
 terminal_size  = "0.1"
