Fix: Spawn filesystem task on a blocking tokio thread
This patch changes the (possibly heavy) File reading from disk to be executed on
a blocking tokio thread.
This way, we ensure we do not block until the `read()` operation is finished and
can continue executing async tasks on the runtime.

Because IO might be expensive (think of a 5GB file that is read to memory), this
is a good optimization.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ shiplift       = { git = "https://github.com/softprops/shiplift", rev = "03cc8c0
 syntect        = "4.4"
 tar            = "0.4"
 terminal_size  = "0.1"
-tokio          = { version = "0.2", features = ["macros", "fs", "process", "io-util"] }
+tokio          = { version = "0.2", features = ["macros", "fs", "process", "io-util", "blocking"] }
 toml           = "0.5"
 typed-builder  = "0.7"
 unindent       = "0.1"
