--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap_generate  = "3.0.0-beta.2"
 colored        = "2"
 config         = "0.10"
 csv            = "1.1"
+data-encoding  = "2.3"
 diesel         = { version = "1.4", features = ["postgres", "chrono", "uuid", "serde_json"] }
 env_logger     = "0.8"
 filters        = "0.4.0"
@@ -34,10 +35,9 @@ regex          = "1"
 reqwest        = { version = "0.10", features = [ "stream" ] }
 resiter        = "0.4"
 result-inspect = "0.1"
+ring           = "0.16"
 serde          = "1"
 serde_json     = "1"
-sha1           = { version = "0.6", features = ["std"] }
-sha2           = "0.9"
 shiplift       = { git = "https://github.com/softprops/shiplift", rev = "03cc8c075f86f1bd9e2c4e29872a0e8b9072c7f0" }
 syntect        = "4.4"
 tar            = "0.4"
