--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "butido"
 version = "0.1.0"
 authors = ["Matthias Beyer <mail@beyermatthias.de>"]
 edition = "2018"
+license = "EPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
