Add compatiblity setting in configuration file
This patch adds a compatibility setting in the configuration file, so that
butido does not fail late when parsing configuration parameters or package
definition files, but early, when the configured compatilibty does not match the
version of butido itself.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ regex          = "1"
 reqwest        = { version = "0.10", features = [ "stream" ] }
 resiter        = "0.4"
 result-inspect = "0.1"
+semver		   = { version = "0.11", features = [ "serde" ] }
 serde          = "1"
 serde_json     = "1"
 sha1           = { version = "0.6", features = ["std"] }
