--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ lazy_static    = "1.4"
 log            = "0.4"
 parse-display  = "0.4"
 pom            = "3"
+ptree          = "0.3"
 regex          = "1"
 reqwest        = { version = "0.10", features = [ "stream" ] }
 resiter        = "0.4"
