--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ license = "EPL-2.0"
 
 [dependencies]
 anyhow         = "1"
+aquamarine     = "0.1.6"
 ascii_table    = ">= 3.0.2"
 atty           = "0.2"
 chrono         = "0.4"
