--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,11 +45,12 @@ serde          = "1"
 serde_json     = "1"
 sha1           = { version = "0.6", features = ["std"] }
 sha2           = "0.9"
-shiplift       = { git = "https://github.com/softprops/shiplift", rev = "03cc8c075f86f1bd9e2c4e29872a0e8b9072c7f0" }
+shiplift       = { git = "https://github.com/softprops/shiplift", rev = "f5017f603afab9821966032ea652cb3161051f17" }
 syntect        = "4.4"
 tar            = "0.4"
 terminal_size  = "0.1"
-tokio          = { version = "0.2", features = ["macros", "fs", "process", "io-util", "blocking"] }
+tokio          = { version = "1.0", features = ["macros", "fs", "process", "io-util"] }
+tokio-stream   = "0.1"
 typed-builder  = "0.8"
 unindent       = "0.1"
 url            = { version = "2", features = ["serde"] }
