Make the package script "complex"
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/examples/packages/repo/config.toml
+++ b/examples/packages/repo/config.toml
@@ -24,7 +24,11 @@ database_user     = "pgdev"
 database_password = "password"
 database_name     = "butido"
 
-available_phases = [ "dummy" ]
+available_phases = [
+    "sourcecheck",
+    "depcheck",
+    "build"
+]
 
 
 [docker]
