--- a/examples/packages/repo/pkg.toml
+++ b/examples/packages/repo/pkg.toml
@@ -11,10 +11,31 @@ download_manually = false
 
 [phases]
 
-dummy.script = '''
-    echo "Dummy"
+sourcecheck.script = '''
+    filename="/inputs/src-{{this.sources.src.hash.hash}}.source"
+    [[ -e $filename ]] || {
+        echo  "MISSING: $filename"
+        {{state "ERR" "Missing input"}}
+        exit 1
+    }
+'''
 
+depcheck.script = '''
+    {{#each this.dependencies.runtime}}
+        # Try to find sha of dependency {{this}}
+        exp_sha="$(echo {{this}} | sed 's,.*\ =,,' | sha1sum | sed 's,\ \ -,,')"
+        sha1sum /inputs/*pkg | grep "$exp_sha" || {
+            echo "FAILED TO FIND SHA: $exp_sha"
+            {{state "ERR" "Failed to find SHA"}}
+            exit 1
+        }
+    {{/each}}
+'''
+
+build.script = '''
     mkdir /outputs
-    touch /outputs/{{this.name}}-{{this.version}}.pkg
+    echo "{{this.version}}" > /outputs/{{this.name}}-{{this.version}}.pkg
+
+    {{state "OK"}}
 '''
 
