--- a/.builds/debian.yml
+++ b/.builds/debian.yml
@@ -7,7 +7,7 @@ packages:
   - pkg-config
   - libpq-dev
 tasks:
-  - install: curl https://sh.rustup.rs -sSf | sh -s -- -y
+  - install: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.50.0
   - prepare_lint: |
       PATH="$HOME/.cargo/bin:$PATH" cargo install cargo-deny
   - lint-licenses: |
