Fix cargo-deny installation
This is also necessary due to the breaking, semver incompatible release
of bitvec.

Rationale:

    https://github.com/EmbarkStudios/cargo-deny/issues/331

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/.builds/debian.yml
+++ b/.builds/debian.yml
@@ -9,7 +9,7 @@ packages:
 tasks:
   - install: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.50.0
   - prepare_lint: |
-      PATH="$HOME/.cargo/bin:$PATH" cargo install cargo-deny
+      PATH="$HOME/.cargo/bin:$PATH" cargo install cargo-deny --locked
   - lint-licenses: |
       cd butido
       PATH="$HOME/.cargo/bin:$PATH" cargo deny check licenses
