--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ shiplift       = "0.7"
 syntect        = "4.4"
 tar            = "0.4"
 terminal_size  = "0.1"
-tokio          = { version = "1.0", features = ["macros", "fs", "process", "io-util"] }
+tokio          = { version = "1.0", features = ["macros", "fs", "process", "io-util", "time"] }
 tokio-stream   = "0.1"
 typed-builder  = "0.9"
 unindent       = "0.1"
