Use the bytesize crate to format size of memory nicely
Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ anyhow         = "1"
 aquamarine     = "0.1.6"
 ascii_table    = ">= 3.0.2"
 atty           = "0.2"
+bytesize       = "1"
 chrono         = "0.4"
 clap           = "3.0.0-beta.2"
 clap_generate  = "3.0.0-beta.2"
