--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ futures        = "0.3"
 getset         = "0.1"
 git2           = "0.13"
 handlebars     = { version = "3", features = ["no_logging"] }
+humantime      = "2.1"
 indicatif      = "0.15"
 indoc          = "1"
 itertools      = "0.10"
