--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ chrono         = "0.4"
 clap           = "3.0.0-beta.2"
 clap_generate  = "3.0.0-beta.2"
 colored        = "2"
-config         = { git = "https://github.com/matthiasbeyer/config-rs", branch = "get-value-mut" }
+config         = { git = "https://github.com/matthiasbeyer/config-rs", branch = "add-setter" }
 csv            = "1.1"
 daggy          = { version = "0.7", features = [ "serde" ] }
 dialoguer      = "0.7"
