--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ url            = { version = "2", features = ["serde"] }
 uuid           = { version = "0.6", features = ["serde", "v4"] }
 walkdir        = "2"
 which          = "4"
+xdg            = "2"
 
 # Hard-code rand to 0.4.4
 #
