Endpoint configuration as Map
This patch rewrites the endpoint configuration format to be a map.

The problem here is, that a list of endpoints cannot easily be used with layered
configuration, where a part of the configuration lives in the XDG config home of
the user and the rest lives in the repository.

With this patch, the endpoints are configured with a map instead of an array,
which makes it less complicated to overwrite.
The name of an endpoint is now the key in the map.

A type `EndpointName` was introduced to take advantage of strong typing. Thus,
the patch touches a bit more code to adapt to the new type in use.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>
Tested-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/config.toml
+++ b/config.toml
@@ -170,8 +170,7 @@ verify_images_present = true
 # List of docker endpoints
 #
 
-[[docker.endpoints]]
-name          = "testhostname"
+[docker.endpoints.testhostname]
 uri           = "http://0.0.0.0:8095" # the URI of the endpoint. Either http or socket path
 endpoint_type = "http" # either "http" or "socket"
 
