Switch from sha1 to sha-1
This is because the "sha1" crate seems to be unmaintained (no release in 3
years) but the sha-1 crate seems to be actively maintained in the context of a
bigger rust-crypto-functions project.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>
Tested-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ result-inspect = "0.2"
 semver		   = { version = "0.11", features = [ "serde" ] }
 serde          = "1"
 serde_json     = "1"
-sha1           = { version = "0.6", features = ["std"] }
+sha-1          = "0.9"
 sha2           = "0.9"
 shiplift       = "0.7"
 syntect        = "4.4"
