Ban fuchsia-cprgn
So we do not accidentially update diesel or some other lib and depend on it by
accident.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/deny.toml
+++ b/deny.toml
@@ -48,6 +48,7 @@ allow = [
 deny = [
     # Each entry the name of a crate and a version range. If version is
     # not specified, all versions will be matched.
+    { name = "fuchsia-cprng" }
 ]
 
 # Certain crates/versions that will be skipped when doing duplicate detection.
