--- a/config.toml
+++ b/config.toml
@@ -173,6 +173,8 @@ verify_images_present = true
 [docker.endpoints.testhostname]
 uri           = "http://0.0.0.0:8095" # the URI of the endpoint. Either http or socket path
 endpoint_type = "http" # either "http" or "socket"
+# optional timeout for connecting to endpoint in seconds, default: 10 seconds
+# timeout = 5
 
 # maximum number of jobs running on this endpoint.
 # Set this to a reasonable high number to be able to run a lot of small jobs.
