--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ config         = "0.11"
 csv            = "1.1"
 daggy          = { version = "0.7", features = [ "serde" ] }
 dialoguer      = "0.8"
-diesel         = { version = "1.4", features = ["postgres", "chrono", "uuid", "serde_json"] }
+diesel         = { version = ">=1.4.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
 env_logger     = "0.8"
 filters        = "0.4.0"
 futures        = "0.3"
