Add support for database connection timeout
This patch adds support for a database connection timeout, giving the user the
option to configure one, but hardcoding a default timeout to 30 seconds.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/config.toml
+++ b/config.toml
@@ -127,6 +127,10 @@ database_user     = "pgdev"
 database_password = "password"
 database_name     = "butido"
 
+# Set a database connection timeout
+# If not set, this defaults to 30
+#database_connection_timeout = 30
+
 
 # Phases which can be configured in the packages
 
