Add human-panic setup
This patch adds a human-panic so that we get nice bug reports if an user
experiences a crash of butido.

Signed-off-by: Matthias Beyer <matthias.beyer@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ futures        = "0.3"
 getset         = "0.1"
 git2           = "0.13"
 handlebars     = { version = "3", features = ["no_logging"] }
+human-panic    = "1"
 humantime      = "2.1"
 indicatif      = "0.15"
 indoc          = "1"
