--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ indoc          = "1"
 itertools      = "0.10"
 lazy_static    = "1.4"
 log            = "0.4"
+pager          = "0.16"
 parse-display  = "0.4"
 pom            = "3"
 ptree          = "0.3"
