--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,3 +100,6 @@ funty = "=1.1.0"
 # the pin here, we enforce the build to not use 1.4.0 or newer.
 zeroize = ">=1.3.0, <1.4.0"
 
+[dev-dependencies]
+toml = "0.5"
+
