--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ csv            = "1.1"
 daggy          = { version = "0.7", features = [ "serde" ] }
 dialoguer      = "0.8"
 diesel         = { version = ">=1.4.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
-diesel_migrations = "*"
+diesel_migrations = ">=1.4"
 env_logger     = "0.9"
 filters        = "0.4.0"
 futures        = "0.3"
