--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ log            = "0.4"
 parse-display  = "0.5"
 pom            = "3"
 ptree          = "0.3"
+rayon          = "1.5"
 regex          = "1"
 reqwest        = { version = "0.11", features = [ "stream" ] }
 resiter        = "0.4"
