--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ keywords    = ["docker", "postgres", "linux", "packaging", "packages"]
 categories  = ["development-tools"]
 
 [badges]
-maintenance = { status = "actively-developed" }
+maintenance = { status = "passively-maintained" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
