Ignore advisory from "ptree" dependencies
Because we cannot release with "git" dependencies in Cargo.toml, we
ignore the advisory for the v0.3.0 release.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>
(cherry picked from commit dbcc83ef292a282842ba30cefd70240fda8b0a55)

--- a/deny.toml
+++ b/deny.toml
@@ -64,6 +64,13 @@ skip-tree = [
 
 [advisories]
 ignore = [
+    # "linked-hash-map creates uninitialized NonNull pointer"
+    #
+    # This occours because our dependency "ptree" has old dependencies itself
+    # Patches to update its dependencies were submitted, but are not released
+    # yet.
+    "RUSTSEC-2020-0026",
+
     # "Potential segfault in the time crate"
     #
     # Patches available, but as "time-rs" is not a direct dependency, we cannot
