--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ indicatif      = "~0.17.2"
 indoc          = "1"
 itertools      = "0.10"
 lazy_static    = "1.4"
+lychee-lib     = "0.8"
 log            = "0.4"
 parse-display  = "0.8"
 pom            = "3"
