--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ maintenance = { status = "passively-maintained" }
 [dependencies]
 anyhow         = "1"
 aquamarine     = "0.1"
-ascii_table    = ">= 3.0.2"
+ascii_table    = "^3.0.2"
 atty           = "0.2"
 bytesize       = "1"
 chrono         = "0.4"
