--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,13 @@ funty = "=1.1.0"
 # the pin here, we enforce the build to not use 1.4.0 or newer.
 zeroize = ">=1.3.0, <1.4.0"
 
+# In 0.8.30 of encoding_rs, they messed up the license information in the crate
+# metadata. Thus, `cargo deny check licenses` fails.
+# This is not a direct dependency of ours, so we need to make sure that the
+# dependency is kept below 0.8.30.
+# Make sure to remove this constraint as soon as possible.
+encoding_rs = ">=0.8.0, <=0.8.29"
+
 [dev-dependencies]
 toml = "0.5"
 
