--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,8 @@ config         = { version = "0.11", default-features = false, features = [ "tom
 csv            = "1.1"
 daggy          = { version = "0.8", features = [ "serde" ] }
 dialoguer      = "0.10"
-diesel         = { version = ">=1.4.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
-diesel_migrations = ">=1.4"
+diesel         = { version = "~1.4.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
+diesel_migrations = "~1.4"
 env_logger     = "0.9"
 filters        = "0.4.0"
 futures        = "0.3"
