--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ ascii_table    = "^3.0.2"
 atty           = "0.2"
 bytesize       = "1"
 chrono         = "0.4"
-clap           = { version = "4.0", features = ["cargo"] }
-clap_complete  = "4.0"
+clap           = "=3.0.0-beta.2"
+clap_generate  = "=3.0.0-beta.2"
 colored        = "2"
 config         = { version = "0.11", default-features = false, features = [ "toml" ] }
 csv            = "1.1"
