Automate the commit checks and move the checklist to CONTRIBUTING.md
We can avoid the dependency on `13rac1/block-fixup-merge-action` because
there is a community-contributed `gitlint` rule for it [0].
The `contrib-disallow-cleanup-commits` rule enforces that the
subject/title does not contain `fixup!`, `squash!`, or `amend!`.
We can also use the `contrib-body-requires-signed-off-by` rule to check
that the body contains the `Signed-off-by` line.

We decided to move the checklist from the PR template to CONTRIBUTING.md
so that contributors don't have to manually tick all checkbox entries
for every PR.
The CI workflow already runs `cargo check`,
`cargo test --all --all-features`, and
`cargo clippy --all --all-targets --all-features -- -D warnings`.

The `github.event_name == 'pull_request'` check isn't required because
of the `on: [pull_request]` statement at the beginning of the file.

[0]: https://jorisroovers.com/gitlint/contrib_rules/

Signed-off-by: Michael Weiss <michael.weiss@atos.net>

--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -6,7 +6,7 @@ name: Pull Request Checks
 jobs:
   commit-lint:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -15,4 +15,10 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install gitlint
-      - run: gitlint --commits $(git merge-base origin/master HEAD)..HEAD
+      - run: |
+          gitlint \
+            -c general.ignore-fixup-commits=false \
+            -c general.ignore-fixup-amend-commits=false \
+            -c general.ignore-squash-commits=false \
+            --contrib contrib-body-requires-signed-off-by,contrib-disallow-cleanup-commits \
+            --commits "$(git merge-base origin/master HEAD)..HEAD"
