--- a/bors.toml
+++ b/bors.toml
@@ -5,5 +5,6 @@ status = [
 
 delete_merged_branches = true
 
+# Required to drop the large HTML part from dependabot PRs and integrated into
+# our PR template (.github/PULL_REQUEST_TEMPLATE.md):
 cut_body_after = "<details>"
-
