Enable caching across jobs of the CI workflow
The `Swatinem/rust-cache@v2` action uses a prefix as part of the cache
key. By default, this prefix is formed by combining the `prefix-key`
(defaults to "v0-rust") and the `shared-key` (defaults to the job name).
As a result, this breaks caching within the CI workflow as the prefix
differs for each job (e.g., `v0-rust-test` for the test job) which
prevents the cache from being restored (`No cache found.`).

Setting `shared-key` (default: empty) will prevent this by using that
string instead of the job name.
Therefore, caching within a ci.yml workflow will now work as expected.

Signed-off-by: Michael Weiss <michael.weiss@atos.net>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
 
       - uses: swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
 
       - name: Run cargo check
         run: cargo check
@@ -47,6 +49,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
 
       - uses: swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
 
       - name: Run cargo test
         run: cargo test --all --all-features
@@ -67,6 +71,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3.2.0
       - uses: swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
       - uses: EmbarkStudios/cargo-deny-action@v1
         with:
           command: check ${{ matrix.checks }}
@@ -92,6 +98,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
           components: clippy
       - uses: swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
       - name: cargo clippy
         run: cargo clippy --all --all-targets --all-features -- -D warnings
 
