Include build information in the version output
Makes it easier to develop/use multiple builds of
butido and figure out from which commit the build
originates.

Fixes #89

Note: VERGEN_GIT_SEMVER currently only prints the version
because there are no annotated tags yet.
We also included a dirty suffix to indicate unclean builds.

Signed-off-by: Nico Steinle <nico.steinle@atos.net>
Co-authored-by: Michael Weiss <michael.weiss@atos.net>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,13 @@ zeroize = ">=1.3.0, <1.6.0"
 # dependency is kept below 0.8.30.
 # Make sure to remove this constraint as soon as possible.
 encoding_rs = ">=0.8.0, <=0.8.32"
+const_format = "0.2"
 
 [dev-dependencies]
 toml = "0.5"
+
+[build-dependencies]
+anyhow = "1"
+git_info = "0.1"
+vergen = { version = "7", default-features = false, features = ["git", "build", "cargo"] }
 
