--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ daggy          = { version = "0.8", features = [ "serde" ] }
 dialoguer      = "0.10"
 diesel         = { version = "~1.4.6", features = ["postgres", "chrono", "uuid", "serde_json"] }
 diesel_migrations = "~1.4"
-env_logger     = "0.10"
 filters        = "0.4.0"
 futures        = "0.3"
 getset         = "0.1"
@@ -108,6 +107,8 @@ zeroize = ">=1.3.0, <1.6.0"
 # Make sure to remove this constraint as soon as possible.
 encoding_rs = ">=0.8.0, <=0.8.32"
 const_format = "0.2"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [dev-dependencies]
 toml = "0.5"
