Support specifying short names as aliases for container image names
This changes the `images` configuration setting so that shorter names
can be assigned to container images. This is done in preparation of
adding an additional column to the `butido db jobs` output that shows
the image that was used for the build (#48). The full image names are
often too long so it should be possible to specify shorter names as
aliases. The `compatibility` setting is bumped since this is a breaking
change that requires updating the configuration files (side note: we
should probably use a normal number for the `compatibility` setting as
it shouldn't depend on the butido version).

Fix #101.

Signed-off-by: Michael Weiss <michael.weiss@atos.net>

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # Example configuration file for butido
 
 # Configuration and package definition compatibility
-compatibility = "0.3.0"
+compatibility = "0.4.0"
 
 # Format of the progress bars used.
 # See https://docs.rs/indicatif/0.15.0/indicatif/#templates
@@ -153,7 +153,9 @@ available_phases = [ "unpack", "patch", "configure", "build", "fixup", "pack" ]
 
 # Images which can be used to build
 # images not listed here are automatically rejected
-images = [ "debian:bullseye" ]
+images = [
+    { name = "debian:bullseye", shortname = "deb11" },
+]
 
 #
 # Verify whether the requested images are present
