--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,9 @@ updates:
   schedule:
     interval: monthly
   open-pull-requests-limit: 30
+  rebase-strategy: "disabled"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: monthly
+  rebase-strategy: "disabled"
