--- a/examples/packages/repo/config.toml
+++ b/examples/packages/repo/config.toml
@@ -38,7 +38,7 @@ available_phases = [
 # Images which can be used to build
 # images not listed here are automatically rejected
 images = [
-    { name = "debian:bullseye", shortname = "deb11" },
+    { name = "debian:bullseye", short_name = "deb11" },
 ]
 verify_images_present = true
 
