--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,11 @@
 name = "butido"
 version = "0.4.0"
 authors = [
-           "Christoph Prokop <christoph.prokop@atos.net>",
-           "Matthias Beyer <mail@beyermatthias.de>",
-          ]
+  # Only for the current/active maintainers (sorted alphabetically by the surname)
+  # All other authors are listed in the "Authors" section of README.md
+  "Nico Steinle <nico.steinle@atos.net>", # @ammernico
+  "Michael Weiss <michael.weiss@atos.net>", # @primeos-work
+]
 edition = "2021"
 rust-version = "1.64.0" # MSRV
 license = "EPL-2.0"
