--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,7 @@ zeroize = ">=1.3.0, <1.6.0"
 encoding_rs = ">=0.8.0, <=0.8.32"
 const_format = "0.2"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 toml = "0.7"
