Capitalize proper nouns
I tried to resist this urge but my eyes couldn't handle it anymore :o :D

Signed-off-by: Michael Weiss <michael.weiss@atos.net>

--- a/config.toml
+++ b/config.toml
@@ -173,7 +173,7 @@ verify_images_present = true
 
 
 #
-# List of docker endpoints
+# List of Docker endpoints
 #
 
 [docker.endpoints.testhostname]
