--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 rust-version = "1.64.0" # MSRV
 license = "EPL-2.0"
 
-description = "Linux package tool utilizing docker, postgres and toml"
+description = "Linux package tool utilizing Docker, PostgreSQL, and TOML"
 homepage    = "https://github.com/science-computing/butido"
 repository  = "https://github.com/science-computing/butido"
 readme      = "README.md"
