--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -3,6 +3,23 @@ on: [push, pull_request, merge_group]
 name: Cargo
 
 jobs:
+  fmt:
+    name: Fmt
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3.5.3
+
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: 1.65.0 # MSRV
+          components: rustfmt
+
+      - name: Run cargo fmt
+        run: cargo fmt --check
+
   check:
     name: Check
     runs-on: ubuntu-latest
@@ -112,6 +129,7 @@ jobs:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     needs:
+      - fmt
       - check
       - test
       - deny
