--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,13 @@ updates:
     interval: monthly
   open-pull-requests-limit: 30
   rebase-strategy: "disabled"
+  ignore:
+    # Ignore all patch updates for version updates only (we'll pull in SemVer
+    # compatible updates in batches using `cargo update` while dependabot's
+    # task is to perform "major" updates that require changes to `Cargo.toml`
+    # as well as security updates):
+  - dependency-name: "*"
+    update-types: ["version-update:semver-patch"]
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
