Replace our Atos email addresses with the new Eviden addresses
The migration(/split) to Eviden is still ongoing but the Eviden email
addresses are the default for quite a while now (at least for external
communication).

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.4.0"
 authors = [
   # Only for the current/active maintainers (sorted alphabetically by the surname)
   # All other authors are listed in the "Authors" section of README.md
-  "Nico Steinle <nico.steinle@atos.net>", # @ammernico
-  "Michael Weiss <michael.weiss@atos.net>", # @primeos-work
+  "Nico Steinle <nico.steinle@eviden.com>", # @ammernico
+  "Michael Weiss <michael.weiss@eviden.com>", # @primeos-work
 ]
 edition = "2021"
 rust-version = "1.70.0" # MSRV
