--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ reqwest        = { version = "0.11", features = [ "stream" ] }
 resiter        = "0.5"
 result-inspect = "0.3"
 rlimit         = "0.10"
+rustversion    = "1"
 semver         = { version = "1", features = [ "serde" ] }
 serde          = "1"
 serde_json     = "1"
