Deny unknown fields in butido's configuration
This helps catching errors/typos in butido's configuration as well as to
cleanup settings that don't exist anymore or got renamed.
It already revealed a misnamed key in our example configuration file
(that caused the corresponding test to fail)!

We already implemented this for package definitions in b075e97.

The error output contains the name of the unknown field and a list of
the valid/expected fields.

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ progress_format = "[{elapsed_precise}] ({percent:>3}%): {bar:40.cyan/blue} | {ms
 # The shebang line used when compiling the packaging scripts
 # Default if this value is not set is "#!/bin/bash".
 # Can be overwritten temporarily via CLI
-script_shebang = "#!/bin/bash"
+shebang = "#!/bin/bash"
 
 # The number of log lines to show if a build fails.
 # Defaults to 10
