--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -101,7 +101,6 @@ jobs:
         include:
           - rust: 1.74.0 # MSRV
             optional: false
-            extra_opts: "-A unknown-lints"
           - rust: beta
             optional: true
     steps:
@@ -114,7 +113,7 @@ jobs:
         with:
           shared-key: "ci"
       - name: cargo clippy
-        run: cargo clippy --all-targets -- -D warnings ${{ matrix.extra_opts }}
+        run: cargo clippy --all-targets -- -D warnings
 
   # This "accumulation" job is used as the required CI check for PRs.
   # We could require multiple jobs but the MSRV is subject to change and makes
