examples/packages: Fix the file names of the sources
The source hash suffix ("-{hash}") was dropped in 495b2dc so this
resulted in "Source missing" errors.

I used the following hack to rename the files (would be cleaner with
Perl's "rename" but I had the binary from util-linux with no regex
support installed):
```
find -type f \
  | sed 's/.*/mv \0 \0/' \
  | sed 's/src-[^ ]*.source$/src.source/' \
  | bash
```

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/examples/packages/repo/pkg.toml
+++ b/examples/packages/repo/pkg.toml
@@ -12,7 +12,7 @@ download_manually = false
 [phases]
 
 sourcecheck.script = '''
-    filename="/inputs/src-{{this.sources.src.hash.hash}}.source"
+    filename="/inputs/src.source"
     [[ -e $filename ]] || {
         echo  "MISSING: $filename"
         {{state "ERR" "Missing input"}}
@@ -50,4 +50,3 @@ build.script = '''
 
     {{state "OK"}}
 '''
-
