Update Progress Bar Format in Configuration
This commit refines the progress bar format in both the `config.toml`
file and the `default_progress_format` function to improve readability
and adapt to narrower terminal widths. The changes include:

- Simplified the progress format by removing unnecessary brackets and
  adjusting the bar length.
- Reduced the progress bar length from 40 characters to 5 characters to
  fit within more compact terminal displays.

Signed-off-by: Nico Steinle <nico.steinle@eviden.com>

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ compatibility = 1
 # fit a 80 or 100 character wide terminal!
 #
 # This is also the default if the setting is not present.
-progress_format = "[{elapsed_precise}] ({percent:>3}%): {bar:40.cyan/blue} | {msg}"
+progress_format = "{elapsed_precise} {percent:>3}% {bar:5.cyan/blue} | {msg}"
 
 
 # The shebang line used when compiling the packaging scripts
