Deny unknown fields in butido's configuration
I already implemented this in 00636cf but forgot to also deny unknown
fields in all sub-structures (recursively). This fixes that so now it
shouldn't be possible to have any unknown fields in butido's
configuration without getting an error message (I already had to remove
`speed` in an example configuration to fix the tests).

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/examples/packages/repo/config.toml
+++ b/examples/packages/repo/config.toml
@@ -47,8 +47,7 @@ images = [
 [docker.endpoints.testhostname]
 uri           = "http://0.0.0.0:8095" # the URI of the endpoint. Either http or socket path
 endpoint_type = "http" # either "http" or "socket"
-speed         = 1 # currently ignored, but required to be present
-maxjobs       = 1 # currently ignored, but required to be present
+maxjobs       = 1 # Maximum number of jobs which are allowed on this endpoint
 
 
 [containers]
