--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ indoc = "2"
 itertools = "0.13"
 lazy_static = "1"
 parse-display = "0.10"
+petgraph = "0.6"
 pom = "3"
 ptree = { version = "0.5", default-features = false }
 rand = "0.8"
