Ensure fixed regular expressions are only compiled once
This is already done for `DEPENDENCY_PARSING_RE` but was missing for
`VERSION_REGEX` (to parse `PackageVersion` into `semver::Version`).

It's an optional performance optimization since re-compiling regexes
should be avoided [0] and, depending on the code path, we might try to
convert many `PackageVersion`s.

[0]: https://docs.rs/regex/1.11.1/regex/index.html#avoid-re-compiling-regexes-especially-in-a-loop

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ indicatif = "0.17"
 indoc = "2"
 itertools = "0.14"
 lazy_static = "1"
+once_cell = "1"
 parse-display = "0.10"
 petgraph = "0.7"
 pom = "3"
