Use the `auto_table_width` feature of the `ascii_table` crate
This is just a small cleanup using a new feature since the last major
update of the crate in 6fb58c5. The only difference should be that the
fallback, if the terminal with cannot be determined, changes from 80 to
100 characters [0] (the switch to `new()` shouldn't matter [1]).

[0]: https://docs.rs/ascii_table/5.0.0/ascii_table/struct.AsciiTable.html#method.set_max_width
[1]: https://docs.rs/ascii_table/5.0.0/src/ascii_table/lib.rs.html#88-90

Signed-off-by: Michael Weiss <michael.weiss@eviden.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ maintenance = { status = "passively-maintained" }
 [dependencies]
 anyhow = "1"
 aquamarine = "0.6"
-ascii_table = { version = "5", features = ["color_codes", "wide_characters"] }
+ascii_table = { version = "5", features = ["auto_table_width", "color_codes", "wide_characters"] }
 bytesize = "2"
 chrono = "0.4"
 clap = { version = "4", features = ["cargo"] }
@@ -68,7 +68,6 @@ sha2 = "0.10"
 shiplift = "0.7"
 syntect = "5"
 tar = "0.4"
-terminal_size = "0.4"
 tokio = { version = "1", features = ["macros", "fs", "process", "io-util", "signal", "time"] }
 tokio-util = "0.7"
 tokio-stream = "0.1"
